--- a/scheduler-samples/scheduler-samples-separately/scheduler-samples-separately-worker-frameless/src/main/resources/worker-conf.yml
+++ b/scheduler-samples/scheduler-samples-separately/scheduler-samples-separately-worker-frameless/src/main/resources/worker-conf.yml
@@ -3,8 +3,8 @@ distributed.scheduler:
   namespace: test_namespace
   worker:
     group: default
-    tick-ms: 100
-    ring-size: 60
+    timing-wheel-tick-ms: 100
+    timing-wheel-ring-size: 60
     maximum-pool-size: 100
     keep-alive-time-seconds: 300
 
