--- a/scheduler-samples/scheduler-samples-separately/scheduler-samples-separately-worker-springboot/pom.xml
+++ b/scheduler-samples/scheduler-samples-separately/scheduler-samples-separately-worker-springboot/pom.xml
@@ -42,6 +42,20 @@
   </dependencies>
 
   <build>
+    <resources>
+      <resource>
+        <directory>src/main/resources</directory>
+        <filtering>false</filtering>
+      </resource>
+      <resource>
+        <directory>../../conf-worker</directory>
+        <includes>
+          <include>**</include>
+        </includes>
+        <filtering>false</filtering>
+      </resource>
+    </resources>
+
     <plugins>
       <plugin>
         <groupId>org.springframework.boot</groupId>
