--- a/scheduler-samples/scheduler-samples-separately/scheduler-samples-separately-worker-springboot/src/main/resources/application.yml
+++ b/scheduler-samples/scheduler-samples-separately/scheduler-samples-separately-worker-springboot/src/main/resources/application.yml
@@ -1,3 +1,2 @@
 server.port: 8083
-distributed.scheduler.namespace: test_namespace
-spring.profiles.include: web,worker,redis
+spring.profiles.include: web,worker,redis,consul
