--- a/scheduler-samples/scheduler-samples-separately/scheduler-samples-separately-worker-frameless/src/main/resources/worker-conf.yml
+++ b/scheduler-samples/scheduler-samples-separately/scheduler-samples-separately-worker-frameless/src/main/resources/worker-conf.yml
@@ -1,12 +1,22 @@
 # scheduler worker configuration
 distributed.scheduler:
-  namespace: test_namespace
   worker:
     group: default
     timing-wheel-tick-ms: 100
     timing-wheel-ring-size: 60
     maximum-pool-size: 100
     keep-alive-time-seconds: 300
+  registry:
+    redis:
+      namespace: redis_namespace
+      session-timeout-ms: 60000
+      registry-period-ms: 4000
+      discovery-period-ms: 4000
+    consul:
+      namespace: consul_namespace
+      host: localhost
+      port: 8500
+      token:
 
 # redis configuration
 redis:
