--- a/scheduler-samples/scheduler-samples-separately/scheduler-samples-separately-worker-frameless/pom.xml
+++ b/scheduler-samples/scheduler-samples-separately/scheduler-samples-separately-worker-frameless/pom.xml
@@ -22,7 +22,7 @@
     <dependency>
       <groupId>org.apache.commons</groupId>
       <artifactId>commons-pool2</artifactId>
-      <version>2.11.1</version>
+      <version>${commons-pool2.version}</version>
     </dependency>
     <dependency>
       <groupId>cn.ponfee</groupId>
@@ -37,6 +37,11 @@
           <artifactId>spring-boot-starter-jdbc</artifactId>
         </exclusion>
       </exclusions>
+    </dependency>
+    <dependency>
+      <groupId>io.vertx</groupId>
+      <artifactId>vertx-web</artifactId>
+      <version>4.3.7</version>
     </dependency>
   </dependencies>
 
