--- a/scheduler-common/pom.xml
+++ b/scheduler-common/pom.xml
@@ -122,9 +122,9 @@
       <version>2.12.2</version>
     </dependency>
     <dependency>
-      <groupId>org.apache.groovy</groupId>
+      <groupId>org.codehaus.groovy</groupId>
       <artifactId>groovy</artifactId>
-      <version>4.0.7</version>
+      <version>${groovy.version}</version>
     </dependency>
     <dependency>
       <groupId>org.apache.httpcomponents</groupId>
