--- a/scheduler-samples/pom.xml
+++ b/scheduler-samples/pom.xml
@@ -116,6 +116,18 @@
   </dependencyManagement>
 
   <dependencies>
+    <!-- Excludes logback -->
+    <dependency>
+      <groupId>org.springframework.boot</groupId>
+      <artifactId>spring-boot-starter-logging</artifactId>
+      <exclusions>
+        <exclusion>
+          <groupId>*</groupId>
+          <artifactId>*</artifactId>
+        </exclusion>
+      </exclusions>
+    </dependency>
+
     <!-- For help compile -->
     <dependency>
       <groupId>org.projectlombok</groupId>
@@ -134,7 +146,6 @@
     <dependency>
       <groupId>org.springframework.boot</groupId>
       <artifactId>spring-boot-configuration-processor</artifactId>
-      <version>${spring-boot.version}</version>
       <optional>true</optional>
       <scope>provided</scope>
     </dependency>
@@ -142,6 +153,13 @@
       <groupId>org.springframework</groupId>
       <artifactId>spring-context-indexer</artifactId>
       <version>${spring-framework.version}</version>
+      <optional>true</optional>
+      <scope>provided</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.hibernate.validator</groupId>
+      <artifactId>hibernate-validator-annotation-processor</artifactId>
+      <version>${hibernate-validator.version}</version>
       <optional>true</optional>
       <scope>provided</scope>
     </dependency>
@@ -157,12 +175,6 @@
       <groupId>org.springframework.boot</groupId>
       <artifactId>spring-boot-starter-test</artifactId>
       <scope>test</scope>
-      <exclusions>
-        <exclusion>
-          <groupId>org.springframework.boot</groupId>
-          <artifactId>spring-boot-starter-logging</artifactId>
-        </exclusion>
-      </exclusions>
     </dependency>
     <dependency>
       <groupId>junit</groupId>
