--- a/scheduler-samples/pom.xml
+++ b/scheduler-samples/pom.xml
@@ -116,7 +116,6 @@
   </dependencyManagement>
 
   <dependencies>
-    <!-- Excludes logback -->
     <dependency>
       <groupId>org.springframework.boot</groupId>
       <artifactId>spring-boot-starter-logging</artifactId>
@@ -179,7 +178,7 @@
     <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
-      <version>4.13.2</version>
+      <version>${junit.version}</version>
       <scope>test</scope>
     </dependency>
   </dependencies>
