--- a/scheduler-core/pom.xml
+++ b/scheduler-core/pom.xml
@@ -17,6 +17,27 @@
   <url>https://github.com/ponfee/distributed-scheduler</url>
 
   <dependencies>
+    <!--
+    1、knife4j(Swagger)不兼容spring-context-indexer
+    2、knife4j(Swagger)不兼容spring-boot-starter-actuator
+    <dependency>
+      <groupId>com.github.xiaoymin</groupId>
+      <artifactId>knife4j-openapi2-spring-boot-starter</artifactId>
+      <version>4.0.0</version>
+      <exclusions>
+        <exclusion>
+          <artifactId>mapstruct</artifactId>
+          <groupId>org.mapstruct</groupId>
+        </exclusion>
+      </exclusions>
+    </dependency>
+    -->
+    <dependency>
+      <groupId>org.springdoc</groupId>
+      <artifactId>springdoc-openapi-ui</artifactId>
+      <version>${springdoc-openapi-ui.version}</version>
+    </dependency>
+
     <dependency>
       <groupId>cn.ponfee</groupId>
       <artifactId>scheduler-common</artifactId>
