--- a/scheduler-samples/pom.xml
+++ b/scheduler-samples/pom.xml
@@ -22,7 +22,7 @@
     <maven.install.skip>true</maven.install.skip>
     <maven.deploy.skip>true</maven.deploy.skip>
 
-    <distributed-scheduler.version>1.9</distributed-scheduler.version>
+    <distributed-scheduler.version>1.10-SNAPSHOT</distributed-scheduler.version>
     <spring-boot.version>2.7.8</spring-boot.version>
     <mapstruct.version>1.5.3.Final</mapstruct.version>
     <testcontainers.version>1.17.6</testcontainers.version>
@@ -70,6 +70,11 @@
       <dependency>
         <groupId>cn.ponfee</groupId>
         <artifactId>scheduler-worker</artifactId>
+        <version>${distributed-scheduler.version}</version>
+      </dependency>
+      <dependency>
+        <groupId>cn.ponfee</groupId>
+        <artifactId>scheduler-test</artifactId>
         <version>${distributed-scheduler.version}</version>
       </dependency>
 
@@ -166,7 +171,6 @@
     <dependency>
       <groupId>cn.ponfee</groupId>
       <artifactId>scheduler-test</artifactId>
-      <version>${distributed-scheduler.version}</version>
       <scope>test</scope>
     </dependency>
     <dependency>
