--- a/scheduler-samples/conf-worker/application-worker.yml
+++ b/scheduler-samples/conf-worker/application-worker.yml
@@ -1,6 +1,6 @@
 # scheduler worker configuration
 distributed.scheduler.worker:
-  group: default
+  group: default,test
   timing-wheel-tick-ms: 100
   timing-wheel-ring-size: 60
   maximum-pool-size: 100
