--- a/scheduler-samples/conf-worker/application-worker.yml
+++ b/scheduler-samples/conf-worker/application-worker.yml
@@ -5,3 +5,4 @@ distributed.scheduler.worker:
   timing-wheel-ring-size: 60
   maximum-pool-size: 100
   keep-alive-time-seconds: 300
+  update-task-worker-thread-pool-size: 6
