--- a/scheduler-samples/scheduler-samples-separately/scheduler-samples-separately-worker-frameless/src/main/resources/worker-conf.yml
+++ b/scheduler-samples/scheduler-samples-separately/scheduler-samples-separately-worker-frameless/src/main/resources/worker-conf.yml
@@ -3,11 +3,12 @@ server.port: 8084
 # scheduler worker configuration
 distributed.scheduler:
   worker:
-    group: default
+    group: default,test1
     timing-wheel-tick-ms: 100
     timing-wheel-ring-size: 60
     maximum-pool-size: 100
     keep-alive-time-seconds: 300
+    update-task-worker-thread-pool-size: 6
   registry:
     redis:
       namespace: redis_namespace
