--- a/scheduler-samples/pom.xml
+++ b/scheduler-samples/pom.xml
@@ -22,7 +22,7 @@
     <maven.install.skip>true</maven.install.skip>
     <maven.deploy.skip>true</maven.deploy.skip>
 
-    <distributed-scheduler.version>1.11</distributed-scheduler.version>
+    <distributed-scheduler.version>1.12-SNAPSHOT</distributed-scheduler.version>
     <spring-boot.version>2.7.11</spring-boot.version>
     <mapstruct.version>1.5.4.Final</mapstruct.version>
     <testcontainers.version>1.18.0</testcontainers.version>
@@ -230,7 +230,7 @@
       <plugin>
         <groupId>org.codehaus.mojo</groupId>
         <artifactId>flatten-maven-plugin</artifactId>
-        <version>1.3.0</version>
+        <version>1.4.1</version>
         <configuration>
           <updatePomFile>true</updatePomFile>
           <flattenMode>resolveCiFriendliesOnly</flattenMode>
@@ -256,7 +256,7 @@
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-resources-plugin</artifactId>
-        <version>3.3.0</version>
+        <version>3.3.1</version>
         <configuration>
           <encoding>${file.encoding}</encoding>
         </configuration>
@@ -306,7 +306,7 @@
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-deploy-plugin</artifactId>
-        <version>3.0.0</version>
+        <version>3.1.1</version>
         <inherited>true</inherited>
         <executions>
           <execution>
